[TabStripContextMenus] Reorder callback tests to match menu order
This CL also modifies callback tests such that they do not depend on the
position of the menu item, and instead calls a helper method to find the
required menu item.

Bug: 512805815
Change-Id: I3e09c9bc837ce477cd1b5a2d72b27fdfb5542601
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7851035
Commit-Queue: Calder Kitagawa <ckitagawa@chromium.org>
Reviewed-by: Calder Kitagawa <ckitagawa@chromium.org>
Auto-Submit: Hitarth Kothari <hitarthkothari@google.com>
Cr-Commit-Position: refs/heads/main@{#1630778}